[gd_scene load_steps=2 format=3 uid="uid://cb8j18rqiw7v3"]

[ext_resource type="Script" path="res://scripts/training_ui.gd" id="1_oyerg"]

[node name="TrainingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oyerg")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Players" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
offset_left = 100.0
offset_top = 100.0
offset_right = 391.0
offset_bottom = 131.0
columns = 2
metadata/_edit_group_ = true

[node name="NbPlayers" type="Label" parent="Players"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nombre de joueurs : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="NbPlayersInput" type="SpinBox" parent="Players"]
layout_mode = 2
min_value = 1.0
max_value = 30.0
value = 5.0
alignment = 1

[node name="Iterations" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
offset_left = 100.0
offset_top = 150.0
offset_right = 399.0
offset_bottom = 181.0
columns = 2
metadata/_edit_group_ = true

[node name="NbIterations" type="Label" parent="Iterations"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nombre d'iterations : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="NbIterationsInput" type="SpinBox" parent="Iterations"]
layout_mode = 2
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 100.0
alignment = 1

[node name="Objects" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -410.0
offset_top = 50.0
offset_right = -75.0
offset_bottom = 221.0
grow_horizontal = 0
columns = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="WreckObjects" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Objets dans l'épave"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bucket" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Seau"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BucketNumber" type="SpinBox" parent="Objects"]
layout_mode = 2
value = 1.0
alignment = 1

[node name="FishingRod" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Canne à pêche"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FishingRodNumber" type="SpinBox" parent="Objects"]
layout_mode = 2
value = 1.0
alignment = 1

[node name="Axe" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Hâche"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AxeNumber" type="SpinBox" parent="Objects"]
layout_mode = 2
value = 1.0
alignment = 1

[node name="Probabilty" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Probabilité"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProbabiliyValue" type="SpinBox" parent="Objects"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
alignment = 1

[node name="Ressources" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -20.0
offset_right = 254.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
columns = 4
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldReesources" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ressources du monde"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartResources" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ressources de départ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourcesNeedsToGo" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ressources pour partir"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Water" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Eau"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W_WaterNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 50.0
max_value = 10000.0
step = 10.0
value = 1000.0
alignment = 1

[node name="S_WaterNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
alignment = 1

[node name="L_WaterNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
alignment = 1

[node name="Food" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nourriture"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W_FoodNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 50.0
max_value = 10000.0
step = 10.0
value = 1000.0
alignment = 1

[node name="S_FoodNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
alignment = 1

[node name="L_FoodNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
alignment = 1

[node name="Wood" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Bois"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W_WoodNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 50.0
max_value = 10000.0
step = 10.0
value = 1000.0
alignment = 1

[node name="S_W" type="Label" parent="Ressources"]
layout_mode = 2

[node name="L_WoodNumber" type="SpinBox" parent="Ressources"]
layout_mode = 2
min_value = 1.0
value = 10.0
alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -85.0
offset_right = 210.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Retour"

[node name="TrainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -85.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Entrainer"

[node name="SimulationButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -85.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Simulation"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="TrainButton" to="." method="_on_train_button_pressed"]
[connection signal="pressed" from="SimulationButton" to="." method="_on_simulation_button_pressed"]
